testdata/asm/invalid/div_03.zkasm
;;error:3:3-15:quotient bit overflow (u16 into u15)
fn div(x u16, y u16) -> (q u15, r u16) {
  q, r = x / y
  return
}
